mediaqueries.css
/* ---------------header------------------- */

/* Existing header styles */

@media only screen and (max-width: 1200px) {
  html {
    font-size: 90%;
  }

  .my-photo {
    width: 100%;
  }
}

@media only screen and (max-width: 1050px) {
  html {
    font-size: 80%;
  }
  /* .title {
    display: none;
  } */
  /* .my-photo {
    margin-top: 4.8rem;
  } */

  .header-img {
    margin-top: 6.4rem;
  }
}

@media only screen and(max-width:900px) {
  html {
    font-size: 80%;
  }

  .img-box {
    width: 100%;
    padding: 0;
  }

  .img-box img {
    width: 100%;
  }
  .header-text {
    height: 45vh;
    padding: 0;
  }

  .home {
    height: auto;
  }

  .section-heading {
    display: flex;
    justify-content: center;
  }
}

@media only screen and (max-width: 800px) {
  html {
    font-size: 80%;
  }
  .about-col-1 {
    display: none;
  }
  .about-col-2 {
    justify-content: center;
    align-items: center;
    margin: auto;
  }
  .row {
    justify-content: center;
  }

  .about-container {
    grid-template-columns: 1fr 1fr;
  }

  .description-container {
    margin-top: 2.4rem;
  }

  .primary-heading {
    font-size: 4.2rem;
  }

  .services-list {
    grid-template-columns: repeat(2, 1fr);
  }
  .services-list div {
    width: 21rem;
  }

  .last-service {
    grid-column: span 2;
    justify-self: center;
  }

  .title {
    margin-top: 2rem;
    display: block;
  }

  .img-box {
    /* width: 80%;
    padding: 0; */
    display: none;
  }

  .img-box img {
    width: 80%;
    margin-top: 4.4rem;
  }
  .header-text {
    height: 45vh;
    padding: 0;
  }

  .home {
    height: auto;
  }

  .section-heading {
    display: flex;
    justify-content: center;
  }
}

@media only screen and (max-width: 650px) {
  html {
    font-size: 70%;
  }

  .home {
    background: #000;

    .img-box {
      width: 100%;
      padding: 0;
    }

    .img-box img {
      width: 100%;
    }
    .header-text {
      height: 45vh;
      padding: 0;
    }

    .home {
      height: auto;
    }

    .section-heading {
      display: flex;
      justify-content: center;
    }
    /* background-image: url(images/background-phone.png); */
  }

  /* ---------------mobile navigation--------------- */

  nav ul {
    background: rgba(255, 0, 79, 0.8);
    position: fixed;
    top: 0;
    right: -12rem;
    width: 12rem;
    height: 50%;
    padding-top: 5rem;
    z-index: 3333;
    transition: all 0.5s;
  }

  .nav-list {
    flex-direction: column;
    gap: 1.2rem;
  }

  nav ul li {
    display: block;
    margin: 1rem 1.5rem;
  }

  .nav-links:hover {
    color: #ff004f;
  }

  nav ul .fa-solid {
    position: absolute;
    top: 2rem;
    left: 2rem;
    cursor: pointer;
    transition: all 0.5s;
  }

  nav ul .fa-solid:hover {
    color: #ff004f;
  }

  nav .fa-solid {
    display: block;
    font-size: 2rem;
    transition: all 0.5s;
  }

  nav .fa-solid:hover {
    color: #ff004f;
  }

  /* ----------------------------------------------- */

  .row {
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  .work-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
    margin-top: 2rem;
  }

  .work {
    width: 22rem;
  }

  .last-work-list {
    grid-column: span 2;
    justify-self: center;
  }

  .section-heading {
    font-size: 2.4rem;
  }
}

@media only screen and (max-width: 550px) {
  .description-container {
    width: 23rem;
    justify-self: center;
  }

  .description {
    text-align: center;
    padding-right: 0;
  }

  .services-list {
    display: flex;
    flex-direction: column;
    gap: 3.2rem;
    justify-content: center;
    align-items: center;
    width: 23rem;
  }

  .work-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3.2rem;
    margin-top: 2rem;
    width: 100%;
  }
  .about-col-1,
  .about-col-2 {
    flex-basis: 100%;
  }

  .about-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .section-heading {
    margin-top: 1.8rem;
    font-size: 2.2rem;
  }

  .left-contact,
  .right-contact {
    flex-basis: 100%;
    justify-content: center;
    align-items: center;
  }

  .btn {
    font-size: 1rem;
  }

  .img-box {
    width: 100%;
    padding: 0;
  }

  .img-box img {
    width: 100%;
  }
  .header-text {
    height: 45vh;
    padding: 0;
  }

  .home {
    height: auto;
  }

  .section-heading {
    display: flex;
    justify-content: center;
  }
}

